<resources>
    <string name="app_name">Pick And Gol</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_user_name">Name</string>
    <string name="edit_user_email">Email</string>
    <string name="edit_user_save_button_text">Save</string>
    <string name="user_edit_change_password">Change password</string>
    <string name="edit_user_old_password">Old password</string>
    <string name="edit_user_new_password">New password</string>
    <string name="new_event_name">Name</string>
    <string name="new_event_date">Date</string>
    <string name="new_event_category">Category</string>
    <string name="new_event_time">Time</string>
</resources>
