<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_margin="20dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="io.keepcoding.pickandgol.fragment.NewEventFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/edit_user_text_size"
                android:text="@string/new_event_name"/>
            <EditText
                android:id="@+id/new_event_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/edit_user_text_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/edit_user_text_size"
                android:text="@string/new_event_date"/>
            <EditText
                android:id="@+id/new_event_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/edit_user_text_size"
                android:text="@string/new_event_time"/>
            <TextView
                android:id="@+id/new_event_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_event_category"/>
            <Spinner
                android:id="@+id/new_event_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/new_event_save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_accept"
                    android:text="@string/edit_user_save_button_text"
                    android:layout_gravity="end"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>